# mini-zueci

./: .gitignore  CMakeLists.txt  ChangeLog  build_android_static.sh  build_ohos_static.sh  cmake_uninstall.cmake.in  libzueci.rc  zueci.c  zueci.h
build_v7/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  cmake_uninstall.cmake
build_v8/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  cmake_uninstall.cmake
cmake/: zueci_add_test.cmake
cmake/modules/: FindZueci.cmake
tests/: CMakeLists.txt  README  test_big5.c  test_big5_tab.h  test_gb18030.c  test_gb18030_tab.h  test_gb2312.c  test_gb2312_tab.h  test_gbk.c  test_gbk_tab.h  test_ksx1001.c  test_ksx1001_tab.h  test_sb.c  test_sjis.c  test_sjis_tab.h  zueci_testcommon.c  zueci_testcommon.h
tests/tools/: gen_test_tab_h.php
tools/: gen_zueci_mb_h.php  gen_zueci_sb_h.php
tools/data/: GB18030.TXT.README  GB2312.TXT.README
